Source/JavaScriptCore/yarr/YarrPattern.h
@@ -59,12 +59,14 @@ public:
     CharacterClass()
         : m_table(0)
         , m_hasNonBMPCharacters(false)
+        , m_anyCharacter(false)
     {
     }
     CharacterClass(const char* table, bool inverted)
         : m_table(table)
         , m_tableInverted(inverted)
         , m_hasNonBMPCharacters(false)
+        , m_anyCharacter(false)
     {
     }
     CharacterClass(std::initializer_list<UChar32> matches, std::initializer_list<CharacterRange> ranges, std::initializer_list<UChar32> matchesUnicode, std::initializer_list<CharacterRange> rangesUnicode)
@@ -75,6 +77,7 @@ public:
         , m_table(0)
         , m_tableInverted(false)
         , m_hasNonBMPCharacters(false)
+        , m_anyCharacter(false)
     {
     }
 
@@ -84,8 +87,9 @@ public:
     Vector<CharacterRange> m_rangesUnicode;
 
     const char* m_table;
-    bool m_tableInverted;
-    bool m_hasNonBMPCharacters;
+    bool m_tableInverted : 1;
+    bool m_hasNonBMPCharacters : 1;
+    bool m_anyCharacter : 1;
 };
 
 enum QuantifierType {
